<resources>
    <string name="app_name">SentinelParent</string>
    <string name="sentinel">Sentinel</string>
    <string name="parent_control_app">Parental Control Application</string>
    <string name="navigation_draw_open">Open Vavigation Drawer</string>
    <string name="navigation_draw_close">Close Navigation Drawer</string>
    <string name="confirmreg">Please review your inputted data</string>
    <string name="messagepinnew">Enter a 4 digit combination PIN</string>
    <string name="messagepinnewconf">Please confirm your 4 digit combination PIN</string>
    <string name="messagepinold">Enter your 4 digit combination PIN</string>
    <string name="submit">Submit</string>
    <string name="confirm">Confirm</string>
    <string name="welcome_parent_user">Welcome Parent User</string>
    <string name="reset_pin">Reset my PIN</string>
    <string name="replace_picture">Change Picture</string>
    <string name="my_profile">My Profile</string>
    <string name="add_child">Add Child</string>
    <string name="child_location">Child Location</string>
    <string name="blocking">Blocking</string>
    <string name="logout">Logout</string>
    <string name="communicate">Communicate</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="updateProfPic">Update Profile Picture</string>
    <string name="fragmentaddchildinstruction">Please input your child\'s name and email address.</string>
    <string name="child_s_name">Child\'s Name</string>
    <string name="child_s_email_address">Child\'s Email Address</string>
    <string name="register">Register</string>
    <string name="faddchildtitle">Add Child: Confirm Action</string>
    <string name="faddchildmsg">Are you sure you want to add this child?</string>
    <string name="fragmentmapinstructions">Please select child to set and/or monitor location.</string>
    <string name="set_child_s_location">Set Child\'s Location</string>
    <string name="save">Save</string>
    <string name="fragmentdeviceinstructions">Please select child to monitor device.</string>
    <string name="please_select_app_to_limit_access">Please select app to limit access</string>
    <string name="emailhint">Email</string>
    <string name="passwordhint">Password</string>
    <string name="btnLogin">Login</string>
    <string name="createAccntHint">Don\'t have an Account? Sign up now!</string>
    <string name="signupHint">Sign-up here</string>
</resources>