<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">
        <item android:id="@+id/Mprfle"
            android:icon="@drawable/face"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/AdChld"
            android:icon="@drawable/add"
            android:title="@string/add_child" />
        <item
            android:id="@+id/ChldLoc"
            android:icon="@drawable/ic_baseline_location_on_24"
            android:title="@string/child_location" />
        <item
            android:id="@+id/Blck"
            android:icon="@drawable/app_blocking"
            android:title="@string/blocking" />

        <item
            android:id="@+id/Logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />

    </group>

    <item android:title="@string/communicate">

        <menu>
            <item
                android:id="@+id/ConUs"
                android:icon="@drawable/support"
                android:title="@string/contact_us" />

            <item
                android:id="@+id/AbUs"
                android:icon="@drawable/about"
                android:title="@string/about_us" />

        </menu>


    </item>


</menu>