<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/fragmentaddchildlinearlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/fragmentaddchildlogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/sentinel"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/fragmentaddchildinstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/antic"
            android:text="@string/fragmentaddchildinstruction"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragmentaddchildchildsemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="30dp"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/antic"
            android:hint="@string/child_s_email_address"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragmentaddchildchildsname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="30dp"
            android:inputType="textPersonName"
            android:fontFamily="@font/antic"
            android:hint="@string/child_s_name"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fragmentaddchildregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:backgroundTint="@color/lightblue"
            android:textSize="18sp"
            android:textColor="@color/White"
            android:text="@string/register">
        </androidx.appcompat.widget.AppCompatButton>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>

