<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/fragmentmaplinearlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/fragmentmaplogo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/sentinel"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/fragmentmapinstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/antic"
            android:text="@string/fragmentmapinstructions"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/fragmentmapspinner"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/antic"
            android:layout_gravity="center"
            android:background="@drawable/rounded_corner"
            style="@android:style/Widget.Holo.Light.Spinner" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragmentmapsetAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/antic"
            android:hint="@string/set_child_s_location"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fragmentmapsave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/darkblue"
            android:textSize="18sp"
            android:fontFamily="@font/antic"
            android:textColor="@color/White"
            android:text="@string/save">
        </androidx.appcompat.widget.AppCompatButton>

        <fragment
            android:name="com.google.android.gms.maps.SupportMapFragment"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            map:cameraZoom="5"
            map:mapType="hybrid"
            android:id="@+id/fragmentmap"
            android:layout_width="315dp"
            android:layout_height="315dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            tools:context=".MapsActivity"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>